--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-quarkus.openapi-generator.codegen.spec.openapi_yml.model-name-prefix=QuarkusOpenApiGenerator
+mp.messaging.incoming.notifications-service.connector=smallrye-kafka
+mp.messaging.incoming.notifications-service.topic=notifications
+mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
 
-%dev.quarkus.kafka.devservices.enabled=false
