Simple Health checks, tweak fixes, variable definitions and build scripts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ mp.messaging.incoming.notifications-service.connector=smallrye-kafka
 mp.messaging.incoming.notifications-service.topic=notifications
 mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
 
+quarkus.http.port=${SERVICE_PORT}
+
