Deployment feature 2.0.0 - splitting up kubernetes uber yaml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 mp.messaging.incoming.notifications-service.connector=smallrye-kafka
-mp.messaging.incoming.notifications-service.topic=notifications
+mp.messaging.incoming.notifications-service.topic=${KAFKA_NOTIFICATIONS_TOPIC}
 mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
 
 quarkus.http.port=${SERVICE_PORT}
