infra changes and fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ mp.messaging.incoming.notifications-service.connector=smallrye-kafka
 mp.messaging.incoming.notifications-service.topic=${KAFKA_NOTIFICATIONS_TOPIC}
 mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
 
+mp.messaging.connector.smallrye-kafka.schema.registry.url=${SCHEMA_REGISTRY_URL}
+
 quarkus.http.port=${SERVICE_PORT}
 
+quarkus.log.level=${LOGGER_LEVEL}
