--- a/pom.xml
+++ b/pom.xml
@@ -65,13 +65,12 @@
             <artifactId>quarkus-messaging-kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.confluent</groupId>
-            <artifactId>kafka-protobuf-serializer</artifactId>
-            <version>7.9.0</version>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-confluent-registry-avro</artifactId>
         </dependency>
         <dependency>
             <groupId>io.confluent</groupId>
-            <artifactId>kafka-schema-serializer</artifactId>
+            <artifactId>kafka-protobuf-serializer</artifactId>
             <version>7.9.0</version>
         </dependency>
         <dependency>
