infra changes and fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
+
 mp.messaging.incoming.notifications-service.connector=smallrye-kafka
 mp.messaging.incoming.notifications-service.topic=${KAFKA_NOTIFICATIONS_TOPIC}
 mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
