GooglePlaces Implementation + Kafka Registry Removal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
 
 mp.messaging.incoming.notifications-service.connector=smallrye-kafka
 mp.messaging.incoming.notifications-service.topic=${KAFKA_NOTIFICATIONS_TOPIC}
-mp.messaging.incoming.notifications-service.value.deserializer=io.confluent.kafka.serializers.protobuf.KafkaProtobufDeserializer
+mp.messaging.incoming.notifications-service.value.deserializer=org.tripmonkey.proto.kafka.NotificationDeserializer
 
-mp.messaging.connector.smallrye-kafka.schema.registry.url=${SCHEMA_REGISTRY_URL}
 
 quarkus.http.port=${SERVICE_PORT}
