Prometheus hooks - no configuration set

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ mp.messaging.incoming.notifications-service.value.deserializer=org.tripmonkey.pr
 
 
 quarkus.http.port=${SERVICE_PORT}
+
+quarkus.micrometer.export.json.enabled=true
+quarkus.micrometer.export.prometheus.path=metrics/prometheus
+#The prometheus metrics will be available from http://0.0.0.0:9000/q/metrics/prometheus.
