--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ mp.messaging.incoming.notifications-service.value.deserializer=org.tripmonkey.pr
 quarkus.http.port=${SERVICE_PORT}
 
 quarkus.micrometer.export.json.enabled=true
-quarkus.micrometer.export.prometheus.path=metrics/prometheus
-#The prometheus metrics will be available from http://0.0.0.0:9000/q/metrics/prometheus.
+quarkus.micrometer.export.prometheus.path=metrics
+#The prometheus metrics will be available from http://0.0.0.0:9000/q/metrics/.
